update answers in Jupyter notebook

--- a/Quadcopter_Project.ipynb
+++ b/Quadcopter_Project.ipynb
@@ -754,16 +754,18 @@
     "\n",
     "**Question 1**: Describe the task that you specified in `task.py`.  How did you design the reward function?\n",
     "\n",
-    "**Answer**: task.py -> taskTakeOff.py\n",
+    "**Answer**: <font color=\"blue\">task.py -> taskTakeOff.py\n",
     "\n",
     "as the file name suggests, the task is to take off the Quadcopter (QC).\n",
     "\n",
-    "Reward is finally just the velocity_z, i.e. `task.sim.v[2]`. Some other attempts included:\n",
+    "Reward is finally based on velocity_z, i.e. `np.tanh(self.sim.v[2])` which with hyperparameter tune allows QC to fly up (quite high but it sort of 'reliably' learns flying up). As advantage tanh is automatically limited between (-1,1).\n",
+    "\n",
+    "Some other attempts included:\n",
     "* distance to the destination in form of `-coff*np.linalg.norm([self.sim.pose[:3] - self.target_pos])` \n",
     "* penalizing 'stay on ground', i.e. `if task.sim.pos[2] == 0: reward -= 10`\n",
-    "* penalizing negative task.sim.v[2] with reward-=10\n",
+    "* include something like `+coff*np.exp(-abs(self.dist_z))`, where `dist_z = self.sim.pose[2] - self.target_pos[2]`\n",
     "\n",
-    "but this did not show any success in flying up. "
+    "but this did not show any success in flying up, neither reaching specified height. </font>"
    ]
   },
   {
@@ -776,10 +778,21 @@
     "- What was your final choice of hyperparameters (such as $\\alpha$, $\\gamma$, $\\epsilon$, etc.)?\n",
     "- What neural network architecture did you use (if any)? Specify layers, sizes, activation functions, etc.\n",
     "\n",
-    "**Answer**:\n",
+    "**Answer**: <font color=\"blue\">\n",
     "* The learning algorithm is based on suggested Actor-Critic with added noise\n",
-    "* It is hard to conclude as there is no reliable take-off. I played with $\\tau$ as 0.1 ...0.01; Adam learning rate: going down to 0.0002 but came back to default value of 0.001; $\\gamma$ as 0.9 .. 0.99; noise parameters e.g. 0.02 .. 0.2 for $\\theta$ and $\\sigma$; tried clipping the reward between -1 and 1, as well as to normalize it (in the Agent); increased action_repeat from 3 to 10.\n",
-    "* Neural network is basically three layers 32-64-32 with ReLU activation (Actor), L2-regularization and Dropout (0.5) layers"
+    "* The final choice for choosen reward function (tanh(veolcity_z) is:\n",
+    "  * $\\tau$ = 0.00025 (important)    \n",
+    "  * Adam learning rates: Actor LR = 0.005, Critic LR = 0.01 (important)\n",
+    "  * Batch size = 32 (seems important too)\n",
+    "  * $\\gamma$ = 0.99\n",
+    "  * L2-regularization (both Actor and Critic) = 0.005\n",
+    "  * Noise parameters fixed as given, since same also used in [arXiv:1509.02971v5](https://arxiv.org/abs/1509.02971), i.e. $\\theta$=0.15 and $\\sigma$=0.2\n",
+    "  * In Task action_repeat = 5\n",
+    "\n",
+    "During parameter search, I played with $\\tau$ as 0.1 ...0.01; Adam learning rate: going down to 0.0002; $\\gamma$ as 0.9 .. 0.99; noise parameters e.g. 0.02 .. 0.2 for $\\theta$ and $\\sigma$; tried clipping the reward between -1 and 1, as well as to normalize it (in the Agent); increased action_repeat from 3 to 10. Introduced Dropout in Actor and Critic (in final version switched off)\n",
+    "\n",
+    "* Neural network is basically three layers 32-64-32 with ReLU activation (Actor), L2-regularization ~~and Dropout (0.5)~~ layers\n",
+    "</font>"
    ]
   },
   {
@@ -792,10 +805,10 @@
     "- Was there a gradual learning curve, or an aha moment?\n",
     "- How good was the final performance of the agent? (e.g. mean rewards over the last 10 episodes)\n",
     "\n",
-    "**Answer**:\n",
+    "**Answer**: <font color=\"blue\">\n",
     "* it is a hard task and needs more indepth study\n",
-    "* a kind of 'aha' was to give velocity_z as reward (idea is taken from the Forum) and start QC from slightly above ground to have a bit more exploration\n",
-    "* the agent may have decently stable behavior for a number of steps but then falls to low values (see Reward plot)"
+    "* a kind of 'aha' was to give velocity_z as reward (idea is taken from the Forum) and use tanh(). It was also important to play more with Learning Rates, batch_size, as well as to dicrease $\\tau$\n",
+    "* the agent seems to learn decently well how to fly up but it always flies much higher than the specified height (10m). Mean reward over last 100 episodes is close to 6 (by design 1 for each action_repeat + 1 if all rotors are runnung) (see Reward plot) </font>"
    ]
   },
   {
@@ -807,9 +820,9 @@
     "- What was the hardest part of the project? (e.g. getting started, plotting, specifying the task, etc.)\n",
     "- Did you find anything interesting in how the quadcopter or your agent behaved?\n",
     "\n",
-    "**Answer**:\n",
-    "* getting started was not so difficult as there is already an example to start with. Getting to at least some take-off required certainly more time and effort\n",
-    "* the Agent still behaves strangely and not reliable, thus any advice and references for further reading are very welcome!"
+    "**Answer**: <font color=\"blue\">\n",
+    "* getting started was not so difficult as there is already an example to start with. Getting to at least some take-off required certainly more time and effort. \n",
+    "* Did not succeed to limit QC to specified height, it flies up but much higher than the specified target height. <b>The Hover task would be nice to complete too! </b> Any advice and references for further reading are very welcome! </font>"
    ]
   },
   {
